# mpf

./: .bandit  .coveragerc  .gitignore  .gitmodules  .landscape.yml  .prospector.yaml  .travis.yml  AUTHORS  AUTHORS.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE.md  MANIFEST.in  Makefile  README.md  RELEASE.md  TODO.md  _.travis.yml  __init__.py  _mc.py  appveyor.yml  fast2.py  get_version.py  kmc.py  mc.py  mpf.bat  mpf.py  mpf.sh  mpf.spec  mpfx.bat  pyproject.toml  setup.py  start.py  test_machine.py  test_regression.py  version.py
.github/: dependabot.yml
.github/workflows/: build_wheels.yml  prospector.yml  run_tests.yml
_old_setup_files/: DEPLOYMENT.md  MANIFEST.in  appveyor.yml  setup.cfg  setup.py
build_scripts/: README.md  set_build_env_vars.py  windows-build.bat  windows-test-wheel.bat
config/: README.txt  bigshot.yaml  config.yaml  devices.yaml  game.yaml  keymap.yaml  machine.yaml  shots.yaml  textstrings.yaml
docs/: Makefile  autobuild.py  conf.py  genindex.rst  index.rst  make.bat  mpf-index.rst  mpf.devices.driver.rst  mpf.devices.drop_target.rst  mpf.devices.flipper.rst  mpf.devices.gi.rst  mpf.devices.matrix_light.rst  mpf.devices.playfield.rst  mpf.devices.score_reel.rst  mpf.devices.target.rst  mpf.display.decorators.rst  mpf.display.elements.animation.rst  mpf.display.modules.playfield_lights.rst  mpf.display.modules.rst  mpf.game.player.rst  mpf.media_controller.core.display.rst  mpf.media_controller.core.font_manager.rst  mpf.media_controller.core.keyboard.rst  mpf.media_controller.core.modes.rst  mpf.media_controller.core.rst  mpf.media_controller.core.show_controller.rst  mpf.media_controller.core.slide_builder.rst  mpf.media_controller.core.window.rst  mpf.media_controller.decorators.rst  mpf.media_controller.display_modules.dmd.rst  mpf.media_controller.display_modules.playfield_lights.rst  mpf.media_controller.elements.animation.rst  mpf.media_controller.elements.image.rst  mpf.media_controller.elements.rst  mpf.media_controller.elements.text.rst  mpf.media_controller.transitions.move_out.rst  mpf.media_controller.transitions.rst  mpf.media_controller.version.rst  mpf.platform.fadecandy.rst  mpf.platform.fast.rst  (+23 more)
docs/_static/: mpf-api.css  mpf.css
docs/_templates/: config_players.rst  config_players_overview.rst  devices.rst  devices_overview.rst  index.rst  layout.html  machine.rst  machine_overview.rst  misc.rst  misc_overview.rst  modes.rst  modes_overview.rst  navbar.html  platforms.rst  platforms_overview.rst  self.machine.rst  tests.rst  tests_overview.rst
docs/bcp/: ball_end.rst  ball_start.rst  device.rst  error.rst  goodbye.rst  hello.rst  index.rst  machine_variable.rst  mode_start.rst  mode_stop.rst  monitor_start.rst  monitor_stop.rst  player_added.rst  player_turn_start.rst  player_variable.rst  register_trigger.rst  remove_trigger.rst  reset.rst  reset_complete.rst  switch.rst  trigger.rst
docs/code/: index.rst  machine_code.rst  mode_code.rst
docs/dev/: Send variables via self.machine.events.post.rst  dev_environment.rst  dsl_vs_programming.rst  event_annotations.rst  hardware.rst  index.rst  mc.widget_player.rst  plugins.rst
docs/functions/: index.rst  machine_variables.rst  player_variables.rst
docs/overview/: boot_process.rst  files.rst  index.rst  installation.rst  yaml.rst
docs/testing/: fuzz_testing.rst  index.rst  running_mpf_tests.rst  writing_machine_tests.rst  writing_mpf_tests.rst  your_game.rst
examples/tutorial/: readme.txt
machine_files/: README.txt
machine_files/demo_man/: LICENSE  README.md
machine_files/tutorial/: readme.txt
media_controller/: mc.py  mcconfig.yaml  version.py
media_controller/core/: __init__.py  display.py  media_controller.py  show_controller.py  sound.py  window.py
media_controller/decorators/: blink.py
media_controller/display_modules/: dmd.py  playfield_lights.py
media_controller/elements/: animation.py  image.py  movie.py  shape.py  text.py  (+1 more)
mpf/: __init__.py  __main__.py  _version.py  attract.py  ball_controller.py  ball_save.py  ballsearch.py  config_spec.yaml  config_validator.py  config_validator.yaml  devices.py  events.py  game.py  hardware.py  keyboard.py  kivytest.py  machine_controller.py  machine_mode.py  mpfconfig.yaml  player.py  switch_controller.py  tasks.py  timing.py
sphinx/: conf.py  index.rst  make.bat  modules.rst  mpf.devices.rst  mpf.display.console.rst  mpf.display.dmd.rst  mpf.display.elements.rst  mpf.display.elements.virtual_dmd.rst  mpf.display.rst  mpf.game.rst  mpf.modules.ball_save.rst  mpf.modules.ball_search.rst  mpf.modules.rst  mpf.platform.rst  mpf.plugins.event_triggers.rst  mpf.plugins.first_flips.rst  mpf.plugins.info_display.rst  mpf.plugins.rst  mpf.rst  mpf.system.auditor.rst  mpf.system.rst  mpf.system.scoring.rst  mpf.system.shot_controller.rst  mpf.system.window_manager.rst  requirements.txt  update.sh
tests/: KmcTestCase.py  MpfTestCase.py  README.md  __init__.py  test_Accelerometer.py  test_AssetManager.py  test_Auditor.py  test_BallController.py  test_BallDevice.py  test_BallDeviceAutoManualPlunger.py  test_BallDeviceEventConfirmation.py  test_BallDeviceHoldCoil.py  test_BallDeviceJamSwitch.py  test_BallDeviceManualEject.py  test_BallDeviceManualWithCount.py  test_BallDeviceManualWithTarget.py  test_BallDeviceNoPlungerSwitch.py  test_BallDeviceRouting.py  test_BallDeviceSwitchConfirmation.py  test_BallDeviceTriggerEvents.py  test_BallLock.py  test_BallSave.py  test_BallSearch.py  test_Clock.py  test_Config.py  test_ConfigMissingVersion.py  test_ConfigOldVersion.py  test_Delay.py  test_DeviceDriver.py  test_DeviceFlasher.py  test_DeviceGI.py  test_DeviceLED.py  test_DeviceMatrixLight.py  test_DropTargets.py  test_EventManager.py  test_Fast.py  test_Flippers.py  test_Kmc.py  test_KmcDisplays.py  test_ModeTimer.py  (+36 more)
tools/: afl_fuzz.py  afl_howto.txt  config_migrator.py  config_versions.yaml  convert_segments.py  debug_run_game.py  dmd_image.py  eli_test.py  fast_test.py  font_tester.py  int_to_pwm.py  monitor_to_config.py  movie_player.py  osc_sender.py  p3_switch_test.py  socket_server.py
utils/: osc_sender.py
(+1449 files in other folders)
